// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LTC Ticker Render Testing BTC Ticker isLoading: True Renders Correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
      "padding": 10,
      "textAlign": "center",
    }
  }
>
  <Image
    source={Object {}}
    style={
      Object {
        "alignSelf": "center",
      }
    }
  />
</View>
`;

exports[`LTC Ticker Render Testing LTC Ticker isLoading: False Renders Correctly 1`] = `
<View
  style={
    Object {
      "opacity": 0,
    }
  }
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
        "padding": 10,
        "textAlign": "center",
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 26,
          "height": 81,
          "paddingTop": 20,
          "textAlign": "center",
        }
      }
    >
      $
    </Text>
  </View>
</View>
`;
